--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Trocar Cor</title>
 </head>
 <body>
-    <input type="text">
-    <button>Trocar Cor</button>
+    <input type="text" id="cor-usuario">
+    <button id="botao-trocar-cor">Trocar Cor</button>
 </body>
 </html>
