--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Trocar Cor</title>
 </head>
 <body>
+    <img src="./img/goku.jpg" alt="Goku">
     <input type="text" id="cor-usuario">
     <button id="botao-trocar-cor">Trocar Cor</button>
     <button id="botao-verde">Verde</button>
