Botão de cor aleatória adicionado

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <button id="botao-trocar-cor">Trocar Cor</button>
     <button id="botao-verde">Verde</button>
     <button id="botao-vermelho">Vermelho</button>
+    <button id="botao-cor-aleatoria">Cor Aleatória</button>
 </body>
 </html>
